백,프론트 수정

--- a/윤종광/hackathon2-backend/app/.project
+++ b/윤종광/hackathon2-backend/app/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>bitcamp-hackathon2</name>
+	<name>hackathon2-backend</name>
 	<comment></comment>
 	<projects/>
 	<natures>
